assets/stylesheets/partials/_header.scss
header {
	.secondary-nav {
		background: $darker-gray;
    font-size:.85em;
		padding: 10px 0;


		.secondary-nav-list {
			padding: 8px 0;
      
			.secondary-nav-list-item {
				border-right: 1px solid $light-gray;

				&:first-child {
					padding-left: 0;
				}

				&:last-child {
					border: none;
					padding-right: 0;
				}
			}
		}

		a {
			color: $light-gray;
      display: block;
      line-height: 11px;

			&:hover {
				color: $white;
			}
		}
	}

	.primary-nav {
		background: $red;
		color: $white;

		a {
			color: $white;
		}
	}

	.page-tools {
    text-align:right;
		a, ul {
			display: inline-block;
		}
	}


}

.primary-header {
  background: $red;
  color: white;
  height: 100%;
}

.primary-nav {
  height: 100%;
  list-style-type: none;
  float: right;
  margin: 0;
  padding: 0;
  
  .primary-nav-item {
    background-color: darken($red, 6);
    border-right: 5px solid $red;
    display: inline-block;
    font-family: 'Patua One', sans-serif;
    height: 100%;
    padding: 0 10px 0 0;
    
    &:last-child {
      border-right: none;
    }
    
    &:hover {
      background-color: rgba(red, .5);
    }
    
    .primary-nav-item__headline {
      border: none;
      font-size: 1.5em;
      letter-spacing: .5px;
      margin: 0;
      padding: 0;
      
    }
    
    .primary-nav-item__tagline {
      display: block;
      font-family: Arial, sans-serif;
      font-size: .55em;
      font-weight: 100;
      letter-spacing: 0;
      margin-top: 10px;
    }
    
    a {
      background: url('../../assets/img/little-arrow.png') no-repeat 12.5px 37px;
      color: white;
      display: block;
      line-height: 22px;
      padding: 35px 0px 33px 40px;
      text-decoration: none;
    }
  }
}

.subscribe {
  border-right: 1px solid $light-gray;
  display: inline-block;
  padding-right: 10px;
}

@media only screen and (min-width: 960px) and (max-width: 1199px) {
.primary-nav .primary-nav-item a {
    padding: 35px 5px 33px 35px;
    width: auto;
}

.primary-nav h2 {
    font-size: 1.6em;
    min-width: 200px;
}

.primary-nav .primary-nav-item {
    min-width: 30%;
}

.primary-nav {
    font-size: 80%;
}

}


@media only screen and (min-width: 768px) and (max-width: 959px) {
.primary-nav{
  width:100%;
}

.primary-nav .primary-nav-item a{
  background: url("../../assets/img/little-arrow.png") no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
  padding: 20px 0 20px 40px;
}
.primary-nav .primary-nav-item{
  min-width:100%;
  margin: 0 0 5px;
}




}

